--- a/helpdesk_mgmt/views/helpdesk_ticket_views.xml
+++ b/helpdesk_mgmt/views/helpdesk_ticket_views.xml
@@ -138,7 +138,7 @@
                     />
                     <field
                         name="stage_id"
-                        widget="statusbar"
+                        widget="statusbar_duration"
                         options="{'clickable': '1', 'fold_field': 'fold'}"
                     />
                 </header>
@@ -259,7 +259,11 @@
         <field name="model">helpdesk.ticket</field>
         <field name="priority" eval="100" />
         <field name="arch" type="xml">
-            <kanban class="o_kanban_mobile" default_group_by="stage_id">
+            <kanban
+                class="o_kanban_mobile"
+                default_group_by="stage_id"
+                default_order="priority desc, write_date desc, id desc"
+            >
                 <field name="number" />
                 <field name="active" />
                 <field name="name" />
